<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.didact.u2_controles_ej20_actividadceckboxyradiogroup.MainActivity"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/ly_background_top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@color/colorAmarillo"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/restaurantemenu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_platos"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ly_primer_plato"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_primer_plato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_primer_plato" />

            <CheckBox
                android:id="@+id/cb_sopa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_sopa" />

            <CheckBox
                android:id="@+id/cb_ensalada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_ensalada" />

            <CheckBox
                android:id="@+id/cb_nachos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_nachos" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_segundo_plato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_segundo_plato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_segundo_plato" />

            <CheckBox
                android:id="@+id/cb_carne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_carne" />

            <CheckBox
                android:id="@+id/cb_pescado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_pescado" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_bebida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bebida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_bebida" />

        <RadioGroup
            android:id="@+id/rg_sino"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb_si" />

            <RadioButton
                android:id="@+id/rb_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb_no" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/bnt_ver_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="VerPedido"
        android:text="@string/btn_ver_pedido" />

    <Spinner
        android:id="@+id/sp_provincias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        android:onClick="provincias"/>
</LinearLayout>
